# lux

./: .gitignore  COMPATIBILITY.md  Cargo.toml  DURABILITY.md  Dockerfile  FUZZING.md  GA.md  Justfile  README.md  SECURITY.md  bench_pg.sh  report.md
.github/workflows/: compat.yml  fuzz.yml
benches/: bench.sh  cmd-compare.sh  cmd-full.sh  cmd-min.sh  http.sh
cli/: Cargo.toml  README.md
cli/src/: lib.rs
examples/: embedded_bench.rs  resp_bench.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/command/: hset
fuzz/corpus/msgpack/: deep_nest  fixmap1_nilkey  nilkey_map  valid_map
fuzz/corpus/resp/: bad_bulklen
fuzz/corpus/snapshot/: huge_list_count  huge_str_len  regression_oom_hash_count  regression_oom_stream_groups  v3_header_only
fuzz/corpus/table_query/: in_list  simple  subquery
fuzz/fuzz_targets/: command.rs  msgpack.rs  resp.rs  snapshot.rs  table_query.rs
sdk/: README.md  package.json
sdk/src/: auth.ts  browser.ts  cookies.ts  index.browser.ts  index.ts  project.ts  ssr.ts  storage.ts  table.ts  types.ts
sdk/tests/: auth.test.ts  browser-ssr.test.ts  direct-url.test.ts  project.test.ts  storage.test.ts
src/: auth.rs  command.rs  disk.rs  embedded.rs  eviction.rs  fuzz_api.rs  grants.rs  hnsw.rs  http.rs  jsonb.rs  lib.rs  lua.rs  main.rs  pubsub.rs  resp.rs  shard_exec.rs  snapshot.rs  store.rs  tables.rs
src/cmd/: bitops.rs  geo.rs  hashes.rs  hll.rs  keys.rs  lists.rs  mod.rs  pubsub.rs  server.rs  sets.rs  sort.rs  sorted_sets.rs  streams.rs  strings.rs  tables.rs
src/store/: mod.rs  streams.rs
src/tables/: mod.rs  select.rs
tests/: auth.rs  bitops.rs  blocking.rs  collections.rs  crash_recovery.rs  geo.rs  hll.rs  http.rs  keystrings.rs  ksub.rs  live_ws.rs  lua.rs  memory.rs  persistence.rs  pipeline_ordering.rs  public_api.rs  pubsub.rs  redis_parity_inventory.rs  reliability.rs  sort.rs  streams.rs  stress.rs  tables.rs  tiered.rs  timeseries.rs  transactions.rs  vectors.rs
tests/common/: mod.rs
tests/support/: universal_client.rs
