[package]
name = "lux"
version = "0.13.2"
edition = "2021"
description = "A fast, multi-threaded Redis-compatible key-value store."
license = "MIT"
repository = "https://github.com/lux-db/lux"
keywords = ["redis", "key-value", "database", "cache"]
categories = ["database", "caching"]

[lib]
name = "lux"
path = "src/lib.rs"

[[bin]]
name = "lux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
parking_lot = "0.12"
hashbrown = "0.14"
ordered-float = "4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
sha1_smol = "1"
rmp = "0.8"
serde_json = "1"
tokio-tungstenite = "0.24"
[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
