[package]
name = "lux"
version = "0.21.5"
edition = "2021"
description = "An open-source application database engine with tables, cache, vectors, auth, realtime, queues, time series, and Redis-compatible commands."
license = "MIT"
repository = "https://github.com/lux-db/lux"
keywords = ["redis", "database", "cache", "vectors", "realtime"]
categories = ["database", "caching"]

[lib]
name = "lux"
path = "src/lib.rs"

[[bin]]
name = "lux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
bytes = "1"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
parking_lot = "0.12"
hashbrown = "0.14"
ordered-float = "4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
sha1_smol = "1"
rmp = "0.8"
serde_json = "1"
tokio-tungstenite = "0.24"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
