[package]
name = "lux-cli"
version = "0.21.0"
edition = "2021"
description = "CLI for Lux"
license = "MIT"
repository = "https://github.com/lux-db/lux"
homepage = "https://luxdb.dev"
keywords = ["lux", "redis", "cli", "database", "cloud"]

[[bin]]
name = "lux"
path = "src/bin/lux.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
colored = "3"
open = "5"
chrono = "0.4"
webpki-roots = "0.26"
